welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:11: error: value nbpas is not a member of Int
			for(cpas <- 1 nbpas){
                                      ^